--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -90,7 +90,7 @@
 					<!--Card 1-->
                     <div class = "project" onclick="window.open('bloc-1.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Future project at Jedha Bootcamp</h4>
+                            <h4>Construction et alimentation d'une infrastructure de données</h4>
                         </div>
                         <div class = "card_description">
                             <p>Wait and See. Wait and See. Wait and See.</p>
@@ -100,7 +100,7 @@
                     <!--Card 2-->
                     <div class = "project" onclick="window.open('bloc-2.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Future project at Jedha Bootcamp</h4>
+                            <h4>Analyse exploratoire de données de speed dating</h4>
                         </div>
                         <div class = "card_description">
                             <p>Wait and See. Wait and See. Wait and See.</p>
@@ -110,7 +110,7 @@
                     <!--Card 3-->
                     <div class = "project" onclick="window.open('bloc-3.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Future project at Jedha Bootcamp</h4>
+                            <h4>Analyse prédictive - Machine Learning</h4>
                         </div>
                         <div class = "card_description">
                             <p>Wait and See. Wait and See. Wait and See.</p>
@@ -124,7 +124,7 @@
 					<!--Card 4-->
                     <div class = "project" onclick="window.open('bloc-4.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Future project at Jedha Bootcamp</h4>
+                            <h4>Analyse prédictive - Deep Learning</h4>
                         </div>
                         <div class = "card_description">
                             <p>Wait and See. Wait and See. Wait and See.</p>
