--- a/style.css
+++ b/style.css
@@ -379,6 +379,20 @@ h5{
 
 }
 
+.page-content .projects-section .project .card_description img {
+
+	width: 100%; /* or any custom size */
+    height: 100%; 
+    object-fit: contain;
+
+
+
+
+	border-radius: 5%;
+
+}
+
+
 
 /* page-content section */
 /* page-content section */
