--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -93,7 +93,7 @@
                             <h4>Construction et alimentation d'une infrastructure de données</h4>
                         </div>
                         <div class = "card_description">
-                            <p>Wait and See. Wait and See. Wait and See.</p>
+                            <img src="images/bloc-2-Card.jpg" alt="profile photo" />
                         </div>
 					</div>
 
