--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -5,7 +5,7 @@
 			<section class="projects-section">
 
                 <h1>Projects</h1>
-                <h2>Jedha Bootcamp: 5 months Data Engineer training</h2>
+                <h2>Jedha Bootcamp: Data Engineer training</h2>
                 <p class="dates">February 2022 to July 2022</p>
 
 
@@ -79,7 +79,7 @@
 
                 
 				
-                <h2>Wild Code School: 5 months Data Analyst training</h2>
+                <h2>Wild Code School: Data Analyst training</h2>
                 <p class="dates">September 2021 to February 2022</p>
 				<div class="projects">
 
