--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -27,7 +27,7 @@
                             <h4>Analyse exploratoire de données de speed dating</h4>
                         </div>
                         <div class = "card_description">
-                            <p>Wait and See. Wait and See. Wait and See.</p>
+                            <img src="images/bloc-2-Card.png" alt="profile photo" />
                         </div>
                     </div>
 
