--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -37,7 +37,7 @@
                             <h4>Analyse prédictive - Machine Learning</h4>
                         </div>
                         <div class = "card_description">
-                            <p>Wait and See. Wait and See. Wait and See.</p>
+                            <img src="images/bloc-3-Card.png" alt="profile photo" />
                         </div>
                     </div>
 
@@ -51,12 +51,12 @@
                             <h4>Analyse prédictive - Deep Learning</h4>
                         </div>
                         <div class = "card_description">
-                            <p>Wait and See. Wait and See. Wait and See.</p>
+                            <img src="images/bloc-4-Card.png" alt="profile photo" />
                         </div>
 					</div>
 
                     <!--Card 5-->
-                    <div class = "project" onclick="window.open('bloc-5.html','_self');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('future_project.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Future project at Jedha Bootcamp</h4>
                         </div>
@@ -66,7 +66,7 @@
                     </div>
 
                     <!--Card 6-->
-                    <div class = "project" onclick="window.open('bloc-6.html','_self');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('future_project.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Future project at Jedha Bootcamp</h4>
                         </div>
