--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -55,7 +55,7 @@
                         </div>
 					</div>
 
-                    <!--Card 5-->
+                    <!--Card 5
                     <div class = "project" onclick="window.open('future_project.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Future project at Jedha Bootcamp</h4>
@@ -65,7 +65,7 @@
                         </div>
                     </div>
 
-                    <!--Card 6-->
+                    Card 6
                     <div class = "project" onclick="window.open('future_project.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Future project at Jedha Bootcamp</h4>
@@ -73,7 +73,7 @@
                         <div class = "card_description">
                             <p>Wait and See. Wait and See. Wait and See.</p>
                         </div>
-                    </div>
+                    </div>-->
 
 				</div>
 
