--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -89,8 +89,7 @@
                                 <h4>Dashboard on Tableau from SQL queries</h4>
                             </div>
                             <div class = "card_description">
-                                <p>This was my first data project. I used SQL to query data from a "Toys and models" 
-                                    database to realize a dashboard with Tableau software.</p>
+                                <img src="images/Tableau.png" alt="profile photo" />
                             </div>
 					</div>
 
