--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -99,7 +99,7 @@
                             <h4>Movie recommendation system</h4>
                         </div>
                         <div class = "card_description">
-                        <p>With the IMDb database, I used Python and Pandas to clear the database. Then Sickit-learn for Machine Learning. I developped a webapp with the Streamlit Python Library to display the recommendations.</p>
+                            <img src="images/movie_recommendation.png" alt="profile photo" />
                         </div>
 					</div>
 
