--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -89,7 +89,7 @@
                                 <h4>Dashboard on Tableau from SQL queries</h4>
                             </div>
                             <div class = "card_description">
-                                <img src="images/Tableau.png" alt="profile photo" />
+                                <img src="images/tableau.png" alt="profile photo" />
                             </div>
 					</div>
 
@@ -109,7 +109,7 @@
                             <h4>Determine music track popularity</h4>
                         </div>
                         <div class = "card_description">
-                        <p>With the Spotify database, Python, Pandas, Sickit-learn I made a webapp on streamlit where people can tweak a music track characteristics to find out the influence on potential popularity.</p>
+                            <img src="images/music_success.png" alt="profile photo" />
                         </div>
 					</div>
 
