--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -128,7 +128,7 @@
                             <h4>Digitecpharma: dashboards on Metabase</h4>
                         </div>
                         <div class = "card_description">
-                        <p>From a PostgreSQL Database, I used SQL queries to display multiple dashboards on Metabase.</p>
+                            <img src="images/digitecpharma.png" alt="profile photo" />
                         </div>
 					</div>
 
@@ -138,7 +138,7 @@
                             <h4>ManoMano: raise customer's engagement</h4>
                         </div>
                         <div class = "card_description">
-                        <p>Using Python, Pandas and the Text2Emotion Python Library, we identified customers feeling and made suggestions to improve customer's engagement.</p>
+                            <img src="images/manomano.png" alt="profile photo" />
                         </div>
                     </div>
 
@@ -148,7 +148,7 @@
                             <h4>Data Analyst training (Python, Pandas...)</h4>
                         </div>
                         <div class = "card_description">
-                        <p>Dozens of lessons provided by the Wild Code School.</p>
+                            <img src="images/wild_code_school.png" alt="profile photo" />
                         </div>
                     </div>
                     
