--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -14,7 +14,7 @@
 					<!--Card 1-->
                     <div class = "project" onclick="window.open('bloc-1.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Construction et alimentation d'une infrastructure de données</h4>
+                            <h4>Construction and supply of a data infrastructure</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-1-Card.png" alt="profile photo" />
@@ -24,7 +24,7 @@
                     <!--Card 2-->
                     <div class = "project" onclick="window.open('bloc-2.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Analyse exploratoire de données de speed dating</h4>
+                            <h4>Exploratory analysis of speed dating data</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-2-Card.png" alt="profile photo" />
@@ -34,7 +34,7 @@
                     <!--Card 3-->
                     <div class = "project" onclick="window.open('bloc-3.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Analyse prédictive - Machine Learning</h4>
+                            <h4>Predictive analysis - Machine Learning</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-3-Card.png" alt="profile photo" />
@@ -48,7 +48,7 @@
 					<!--Card 4-->
                     <div class = "project" onclick="window.open('bloc-4.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Analyse prédictive - Deep Learning</h4>
+                            <h4>Predictive analysis - Deep Learning</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-4-Card.png" alt="profile photo" />
