--- a/_includes/nav_bar.html
+++ b/_includes/nav_bar.html
@@ -2,7 +2,7 @@
 <p id="about_me"></p>
 
 <nav>
-    <img src="images/cloud_nav_bar.png"/>
+    <img src="images/1440p_cloud_nav_bar.png"/>
     <div class="nav_container">
     <div class="profile">
         <h1><a href="index.html">Home</a></h1>
