--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -12,7 +12,7 @@
 				<div class="projects">
 
 					<!--Card 1-->
-                    <div class = "project" onclick="window.open('bloc-1.html','_self');" style="cursor: pointer;">
+                    <div class = "project" onclick="window.open('projects/bloc-1.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Construction and supply of a data infrastructure</h4>
                         </div>
