--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -55,25 +55,25 @@
                         </div>
 					</div>
 
-                    <!--Card 5
-                    <div class = "project" onclick="window.open('future_project.html','_self');" style="cursor: pointer;">
+                    <!--Card 5-->
+                    <div class = "project" onclick="window.open('bloc-5.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Future project at Jedha Bootcamp</h4>
+                            <h4>Industrialization of a machine learning algorithm and automation of decision-making processes</h4>
                         </div>
                         <div class = "card_description">
-                            <p>Wait and See. Wait and See. Wait and See.</p>
+                            <img src="images/bloc-4-Card.png" alt="profile photo" />
                         </div>
                     </div>
 
-                    Card 6
-                    <div class = "project" onclick="window.open('future_project.html','_self');" style="cursor: pointer;">
+                    <!--Card 6-->
+                    <div class = "project" onclick="window.open('bloc-6.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Future project at Jedha Bootcamp</h4>
+                            <h4>Data Management</h4>
                         </div>
                         <div class = "card_description">
-                            <p>Wait and See. Wait and See. Wait and See.</p>
+                            <img src="images/bloc-4-Card.png" alt="profile photo" />
                         </div>
-                    </div>-->
+                    </div>
 
 				</div>
 
