--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -58,7 +58,7 @@
                     <!--Card 5-->
                     <div class = "project" onclick="window.open('bloc-5.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Industrialization of a machine learning algorithm and automation of decision-making processes</h4>
+                            <h4>Industrialization of a machine learning algorithm</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-4-Card.png" alt="profile photo" />
@@ -68,7 +68,7 @@
                     <!--Card 6-->
                     <div class = "project" onclick="window.open('bloc-6.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Data Management</h4>
+                            <h4>API - Data Visualisation online</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-4-Card.png" alt="profile photo" />
