--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -17,7 +17,7 @@
                             <h4>Construction and supply of a data infrastructure</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/bloc-1-Card.png" alt="profile photo" />
+                            <img src="images/bloc-1b-Card.png" alt="profile photo" />
                         </div>
 					</div>
 
