--- a/style.css
+++ b/style.css
@@ -327,11 +327,11 @@ h5{
 
 .page-content .projects-section .project h4 {
 	text-align: center;
-	position: absolute;
+	position: relative;
 	top: 50%;
 	-ms-transform: translateY(-50%);
 	transform: translateY(-50%);
-	padding: 0 10%;
+
 	
 }
 
