--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -27,7 +27,7 @@
                             <h4>Exploratory analysis of speed dating data</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/bloc-2-Card.png" alt="profile photo" />
+                            <img src="images/bloc-1c-Card.png" alt="profile photo" />
                         </div>
                     </div>
 
