--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -27,7 +27,7 @@
                             <h4>Exploratory analysis of speed dating data</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/bloc-1c-Card.png" alt="profile photo" />
+                            <img src="images/bloc-2b-Card.png" alt="profile photo" />
                         </div>
                     </div>
 
@@ -37,7 +37,7 @@
                             <h4>Predictive analysis - Machine Learning</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/bloc-3-Card.png" alt="profile photo" />
+                            <img src="images/bloc-3b-Card.png" alt="profile photo" />
                         </div>
                     </div>
 
@@ -51,7 +51,7 @@
                             <h4>Predictive analysis - Deep Learning</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/bloc-4-Card.png" alt="profile photo" />
+                            <img src="images/bloc-4b-Card.png" alt="profile photo" />
                         </div>
 					</div>
 
@@ -61,7 +61,7 @@
                             <h4>Industrialization of a machine learning algorithm</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/bloc-5-Card.png" alt="profile photo" />
+                            <img src="images/bloc-5b-Card.png" alt="profile photo" />
                         </div>
                     </div>
 
@@ -71,7 +71,7 @@
                             <h4>API - Data Visualisation online</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/bloc-6-Card.png" alt="profile photo" />
+                            <img src="images/bloc-6b-Card.png" alt="profile photo" />
                         </div>
                     </div>
 
@@ -89,7 +89,7 @@
                                 <h4>Dashboard on Tableau from SQL queries</h4>
                             </div>
                             <div class = "card_description">
-                                <img src="images/tableau.png" alt="profile photo" />
+                                <img src="images/tableau-2.png" alt="profile photo" />
                             </div>
 					</div>
 
@@ -99,7 +99,7 @@
                             <h4>Movie recommendation system</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/movie_recommendation.png" alt="profile photo" />
+                            <img src="images/movie_recommendation-2.png" alt="profile photo" />
                         </div>
 					</div>
 
@@ -109,7 +109,7 @@
                             <h4>Determine music track popularity</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/music_success.png" alt="profile photo" />
+                            <img src="images/music_success-2.png" alt="profile photo" />
                         </div>
 					</div>
 
@@ -128,7 +128,7 @@
                             <h4>Digitecpharma: dashboards on Metabase</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/digitecpharma.png" alt="profile photo" />
+                            <img src="images/digitecpharma-2.png" alt="profile photo" />
                         </div>
 					</div>
 
@@ -138,7 +138,7 @@
                             <h4>ManoMano: raise customer's engagement</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/manomano.png" alt="profile photo" />
+                            <img src="images/manomano-2.png" alt="profile photo" />
                         </div>
                     </div>
 
