--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -24,7 +24,7 @@
                     <!--Card 2-->
                     <div class = "project" onclick="window.open('bloc-2.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Exploratory analysis of speed dating data</h4>
+                            <h4>Python<br>Pandas<br>Scrapy<br>Plotly</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-2b-Card.png" alt="profile photo" />
@@ -34,7 +34,7 @@
                     <!--Card 3-->
                     <div class = "project" onclick="window.open('bloc-3.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Predictive analysis - Machine Learning</h4>
+                            <h4>Python<br>Plotly<br>Sklearn<br>Linear Regression<br>GridSearchCV</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-3b-Card.png" alt="profile photo" />
