--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -48,7 +48,7 @@
 					<!--Card 4-->
                     <div class = "project" onclick="window.open('bloc-4.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Predictive analysis - Deep Learning</h4>
+                            <h4>Python<br>Plotly<br>Tensorflow<br>Spacy</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-4b-Card.png" alt="profile photo" />
@@ -58,7 +58,7 @@
                     <!--Card 5-->
                     <div class = "project" onclick="window.open('bloc-5.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Industrialization of a machine learning algorithm</h4>
+                            <h4>Python<br>Streamlit<br>Docker<br>MLflow<br>Heroku<br>Plotly<br>Sklearn<br>Linear Regression<br>Fast API</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-5b-Card.png" alt="profile photo" />
@@ -68,7 +68,7 @@
                     <!--Card 6-->
                     <div class = "project" onclick="window.open('bloc-6.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>API - Data Visualisation online</h4>
+                            <h4>Python<br>Streamlit<br>Docker<br>AWS Elastic Beanstalk<br>API<br>Plotly<br>Matplotlib</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-6b-Card.png" alt="profile photo" />
@@ -86,7 +86,7 @@
 					<!--Card 1-->
                         <div class = "project" onclick="window.open('tableau_project.html','_self');" style="cursor: pointer;">
                             <div class = "card_title">
-                                <h4>Dashboard on Tableau from SQL queries</h4>
+                                <h4>SQL<br>Tableau</h4>
                             </div>
                             <div class = "card_description">
                                 <img src="images/tableau-2.png" alt="profile photo" />
@@ -96,7 +96,7 @@
                     <!--Card 2-->
 					<div class = "project" onclick="window.open('movie_recommendation_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
-                            <h4>Movie recommendation system</h4>
+                            <h4>Python<br>Pandas<br>Plotly<br>Streamlit<br>Sklearn<br>K-nearest neighbors</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/movie_recommendation-2.png" alt="profile photo" />
@@ -106,7 +106,7 @@
                     <!--Card 3-->
                     <div class = "project" onclick="window.open('music_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
-                            <h4>Determine music track popularity</h4>
+                            <h4>Python<br>Streamlit<br>RandomForest Classifier</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/music_success-2.png" alt="profile photo" />
@@ -125,7 +125,7 @@
                     <!--Card 4-->
                     <div class = "project" onclick="window.open('digitecpharma_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
-                            <h4>Digitecpharma: dashboards on Metabase</h4>
+                            <h4>Metabase<br>SQL</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/digitecpharma-2.png" alt="profile photo" />
@@ -135,7 +135,7 @@
                     <!--Card 5-->
                     <div class = "project" onclick="window.open('manomano_project.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>ManoMano: raise customer's engagement</h4>
+                            <h4>Power BI<br>Python<br>Pandas<br>NLP<br>Text2Emotion<br>Photoshop</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/manomano-2.png" alt="profile photo" />
