--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -5,8 +5,7 @@
 			<section class="projects-section">
 
                 <h1>Projects</h1>
-                <h2>Jedha Bootcamp: Data Engineer training</h2>
-                <p class="dates">February 2022 to July 2022</p>
+                <h2>Data Engineer</h2>
 
 
 				<div class="projects">
@@ -77,10 +76,79 @@
 
 				</div>
 
+
+                <h2>Data Scientist</h2>
+
+				<div class="projects">
+
+					<!--Card 1-->
+                    <div class = "project" onclick="window.open('bloc-1.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>AWS S3<br>AWS Redshift<br>Scrapy<br>Beautiful Soup<br>API<br>Python<br>SQL Alchemy<br>SQL</h4>
+                        </div>
+                        <div class = "card_description">
+                            <img src="images/bloc-1b-Card.png" alt="profile photo" />
+                        </div>
+					</div>
+
+                    <!--Card 2-->
+                    <div class = "project" onclick="window.open('bloc-2.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Python<br>Pandas<br>Scrapy<br>Plotly</h4>
+                        </div>
+                        <div class = "card_description">
+                            <img src="images/bloc-2b-Card.png" alt="profile photo" />
+                        </div>
+                    </div>
+
+                    <!--Card 3-->
+                    <div class = "project" onclick="window.open('bloc-3.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Python<br>Plotly<br>Sklearn<br>Linear Regression<br>GridSearchCV</h4>
+                        </div>
+                        <div class = "card_description">
+                            <img src="images/bloc-3b-Card.png" alt="profile photo" />
+                        </div>
+                    </div>
+
+				</div>
+
+				<div class="projects">
+
+					<!--Card 4-->
+                    <div class = "project" onclick="window.open('bloc-4.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Python<br>Plotly<br>Tensorflow<br>Spacy</h4>
+                        </div>
+                        <div class = "card_description">
+                            <img src="images/bloc-4b-Card.png" alt="profile photo" />
+                        </div>
+					</div>
+
+                    <!--Card 5-->
+                    <div class = "project" onclick="window.open('bloc-5.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Python<br>Streamlit<br>Docker<br>MLflow<br>Heroku<br>Plotly<br>Sklearn<br>Linear Regression<br>Fast API</h4>
+                        </div>
+                        <div class = "card_description">
+                            <img src="images/bloc-5b-Card.png" alt="profile photo" />
+                        </div>
+                    </div>
+
+                    <!--Card 6-->
+                    <div class = "project" onclick="window.open('bloc-6.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Python<br>Streamlit<br>Docker<br>AWS Elastic Beanstalk<br>API<br>Plotly<br>Matplotlib</h4>
+                        </div>
+                        <div class = "card_description">
+                            <img src="images/bloc-6b-Card.png" alt="profile photo" />
+                        </div>
+                    </div>
+
+				</div>
                 
 				
-                <h2>Wild Code School: Data Analyst training</h2>
-                <p class="dates">September 2021 to February 2022</p>
+                <h2>Data Analyst</h2>
 				<div class="projects">
 
 					<!--Card 1-->
