--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -23,7 +23,7 @@
                     <!--Card 2-->
                     <div class = "project" onclick="window.open('bloc-2.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Python<br>Pandas<br>Scrapy<br>Plotly</h4>
+                            <h4>Python<br>Pandas<br>Plotly</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-2b-Card.png" alt="profile photo" />
@@ -94,7 +94,7 @@
                     <!--Card 2-->
                     <div class = "project" onclick="window.open('bloc-2.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Python<br>Pandas<br>Scrapy<br>Plotly</h4>
+                            <h4>Python<br>Pandas<br>Plotly</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/bloc-2b-Card.png" alt="profile photo" />
