--- a/style.css
+++ b/style.css
@@ -306,6 +306,7 @@ h5{
 .page-content h2 {
 	text-align: center;
 	margin-top: 30px;
+	margin-bottom: 20px;
 }
 
 .page-content .projects-section .projects {
