--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -20,39 +20,6 @@
                         </div>
 					</div>
 
-                    <!--Card 2-->
-                    <div class = "project" onclick="window.open('bloc-2.html','_self');" style="cursor: pointer;">
-                        <div class = "card_title">
-                            <h4>Python<br>Pandas<br>Plotly</h4>
-                        </div>
-                        <div class = "card_description">
-                            <img src="images/bloc-2b-Card.png" alt="profile photo" />
-                        </div>
-                    </div>
-
-                    <!--Card 3-->
-                    <div class = "project" onclick="window.open('bloc-3.html','_self');" style="cursor: pointer;">
-                        <div class = "card_title">
-                            <h4>Python<br>Plotly<br>Sklearn<br>Linear Regression<br>GridSearchCV</h4>
-                        </div>
-                        <div class = "card_description">
-                            <img src="images/bloc-3b-Card.png" alt="profile photo" />
-                        </div>
-                    </div>
-
-				</div>
-
-				<div class="projects">
-
-					<!--Card 4-->
-                    <div class = "project" onclick="window.open('bloc-4.html','_self');" style="cursor: pointer;">
-                        <div class = "card_title">
-                            <h4>Python<br>Plotly<br>Tensorflow<br>Spacy</h4>
-                        </div>
-                        <div class = "card_description">
-                            <img src="images/bloc-4b-Card.png" alt="profile photo" />
-                        </div>
-					</div>
 
                     <!--Card 5-->
                     <div class = "project" onclick="window.open('bloc-5.html','_self');" style="cursor: pointer;">
@@ -75,33 +42,17 @@
                     </div>
 
 				</div>
+
+
 
 
                 <h2>Data Scientist</h2>
 
 				<div class="projects">
 
-					<!--Card 1-->
-                    <div class = "project" onclick="window.open('bloc-1.html','_self');" style="cursor: pointer;">
-                        <div class = "card_title">
-                            <h4>AWS S3<br>AWS Redshift<br>Scrapy<br>Beautiful Soup<br>API<br>Python<br>SQL Alchemy<br>SQL</h4>
-                        </div>
-                        <div class = "card_description">
-                            <img src="images/bloc-1b-Card.png" alt="profile photo" />
-                        </div>
-					</div>
 
-                    <!--Card 2-->
-                    <div class = "project" onclick="window.open('bloc-2.html','_self');" style="cursor: pointer;">
-                        <div class = "card_title">
-                            <h4>Python<br>Pandas<br>Plotly</h4>
-                        </div>
-                        <div class = "card_description">
-                            <img src="images/bloc-2b-Card.png" alt="profile photo" />
-                        </div>
-                    </div>
 
-                    <!--Card 3-->
+                    <!--Card X-->
                     <div class = "project" onclick="window.open('bloc-3.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Python<br>Plotly<br>Sklearn<br>Linear Regression<br>GridSearchCV</h4>
@@ -111,11 +62,7 @@
                         </div>
                     </div>
 
-				</div>
-
-				<div class="projects">
-
-					<!--Card 4-->
+					<!--Card X-->
                     <div class = "project" onclick="window.open('bloc-4.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Python<br>Plotly<br>Tensorflow<br>Spacy</h4>
@@ -125,27 +72,43 @@
                         </div>
 					</div>
 
-                    <!--Card 5-->
-                    <div class = "project" onclick="window.open('bloc-5.html','_self');" style="cursor: pointer;">
-                        <div class = "card_title">
-                            <h4>Python<br>Streamlit<br>Docker<br>MLflow<br>Heroku<br>Plotly<br>Sklearn<br>Linear Regression<br>Fast API</h4>
+                    <!--Card 2-->
+					<div class = "project" onclick="window.open('movie_recommendation_project.html','_self');" style="cursor: pointer;">
+						<div class = "card_title">
+                            <h4>Python<br>Pandas<br>Plotly<br>Streamlit<br>Sklearn<br>K-nearest neighbors</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/bloc-5b-Card.png" alt="profile photo" />
+                            <img src="images/movie_recommendation-2.png" alt="profile photo" />
+                        </div>
+					</div>
+                </div>
+
+                    <div class="projects">
+
+                    </div>
+                    <!--Card 3-->
+                    <div class = "project" onclick="window.open('music_project.html','_self');" style="cursor: pointer;">
+						<div class = "card_title">
+                            <h4>Python<br>Streamlit<br>RandomForest Classifier</h4>
+                        </div>
+                        <div class = "card_description">
+                            <img src="images/music_success-2.png" alt="profile photo" />
+                        </div>
+					</div>
+
+                    <!--Card 5-->
+                    <div class = "project" onclick="window.open('manomano_project.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Power BI<br>Python<br>Pandas<br>NLP<br>Text2Emotion<br>Photoshop</h4>
+                        </div>
+                        <div class = "card_description">
+                            <img src="images/manomano-2.png" alt="profile photo" />
                         </div>
                     </div>
 
-                    <!--Card 6-->
-                    <div class = "project" onclick="window.open('bloc-6.html','_self');" style="cursor: pointer;">
-                        <div class = "card_title">
-                            <h4>Python<br>Streamlit<br>Docker<br>AWS Elastic Beanstalk<br>API<br>Plotly<br>Matplotlib</h4>
-                        </div>
-                        <div class = "card_description">
-                            <img src="images/bloc-6b-Card.png" alt="profile photo" />
-                        </div>
-                    </div>
 
 				</div>
+
                 
 				
                 <h2>Data Analyst</h2>
@@ -161,34 +124,25 @@
                             </div>
 					</div>
 
-                    <!--Card 2-->
-					<div class = "project" onclick="window.open('movie_recommendation_project.html','_self');" style="cursor: pointer;">
-						<div class = "card_title">
-                            <h4>Python<br>Pandas<br>Plotly<br>Streamlit<br>Sklearn<br>K-nearest neighbors</h4>
+
+
+
+
+
+                    <!--Card X-->
+                    <div class = "project" onclick="window.open('bloc-2.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Python<br>Pandas<br>Plotly</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/movie_recommendation-2.png" alt="profile photo" />
+                            <img src="images/bloc-2b-Card.png" alt="profile photo" />
                         </div>
-					</div>
-
-                    <!--Card 3-->
-                    <div class = "project" onclick="window.open('music_project.html','_self');" style="cursor: pointer;">
-						<div class = "card_title">
-                            <h4>Python<br>Streamlit<br>RandomForest Classifier</h4>
-                        </div>
-                        <div class = "card_description">
-                            <img src="images/music_success-2.png" alt="profile photo" />
-                        </div>
-					</div>
-
-                </div>
+                    </div>
 
 
 
 
 
-
-                <div class="projects">
 
                     <!--Card 4-->
                     <div class = "project" onclick="window.open('digitecpharma_project.html','_self');" style="cursor: pointer;">
@@ -200,15 +154,10 @@
                         </div>
 					</div>
 
-                    <!--Card 5-->
-                    <div class = "project" onclick="window.open('manomano_project.html','_self');" style="cursor: pointer;">
-                        <div class = "card_title">
-                            <h4>Power BI<br>Python<br>Pandas<br>NLP<br>Text2Emotion<br>Photoshop</h4>
-                        </div>
-                        <div class = "card_description">
-                            <img src="images/manomano-2.png" alt="profile photo" />
-                        </div>
-                    </div>
+
+                </div>
+
+                    <div class="projects">
 
                     <!--Card 6-->
                     <div class = "project" onclick="window.open('wild_code_school_project.html','_self');" style="cursor: pointer;">
