--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -21,7 +21,7 @@
 					</div>
 
 
-                    <!--Card 5-->
+                    <!--Card 2-->
                     <div class = "project" onclick="window.open('bloc-5.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Python<br>Streamlit<br>Docker<br>MLflow<br>Heroku<br>Plotly<br>Sklearn<br>Linear Regression<br>Fast API</h4>
@@ -31,7 +31,7 @@
                         </div>
                     </div>
 
-                    <!--Card 6-->
+                    <!--Card 3-->
                     <div class = "project" onclick="window.open('bloc-6.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Python<br>Streamlit<br>Docker<br>AWS Elastic Beanstalk<br>API<br>Plotly<br>Matplotlib</h4>
@@ -52,7 +52,7 @@
 
 
 
-                    <!--Card X-->
+                    <!--Card 1-->
                     <div class = "project" onclick="window.open('bloc-3.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Python<br>Plotly<br>Sklearn<br>Linear Regression<br>GridSearchCV</h4>
@@ -62,7 +62,7 @@
                         </div>
                     </div>
 
-					<!--Card X-->
+					<!--Card 2-->
                     <div class = "project" onclick="window.open('bloc-4.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Python<br>Plotly<br>Tensorflow<br>Spacy</h4>
@@ -72,7 +72,7 @@
                         </div>
 					</div>
 
-                    <!--Card 2-->
+                    <!--Card 3-->
 					<div class = "project" onclick="window.open('movie_recommendation_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Python<br>Pandas<br>Plotly<br>Streamlit<br>Sklearn<br>K-nearest neighbors</h4>
@@ -85,7 +85,7 @@
 
                     <div class="projects">
 
-                    <!--Card 3-->
+                    <!--Card 4-->
                     <div class = "project" onclick="window.open('music_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Python<br>Streamlit<br>RandomForest Classifier</h4>
@@ -98,13 +98,22 @@
                     <!--Card 5-->
                     <div class = "project" onclick="window.open('manomano_project.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Power BI<br>Python<br>Pandas<br>NLP<br>Text2Emotion<br>Photoshop</h4>
+                            <h4>Power BI<br>Python<br>Pandas<br>NLP<br>Text2Emotion</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/manomano-2.png" alt="profile photo" />
                         </div>
                     </div>
 
+                    <!--Card 6-->
+                    <div class = "project" onclick="window.open('wild_code_school_project.html','_self');" style="cursor: pointer;">
+                        <div class = "card_title">
+                            <h4>Data Analyst training (Python, Pandas...)</h4>
+                        </div>
+                        <div class = "card_description">
+                            <img src="images/wild_code_school.png" alt="profile photo" />
+                        </div>
+                    </div>
 
 				</div>
 
@@ -128,7 +137,7 @@
 
 
 
-                    <!--Card X-->
+                    <!--Card 2-->
                     <div class = "project" onclick="window.open('bloc-2.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
                             <h4>Python<br>Pandas<br>Plotly</h4>
@@ -143,7 +152,7 @@
 
 
 
-                    <!--Card 4-->
+                    <!--Card 3-->
                     <div class = "project" onclick="window.open('digitecpharma_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
                             <h4>Metabase<br>SQL</h4>
@@ -156,19 +165,7 @@
 
                 </div>
 
-                    <div class="projects">
 
-                    <!--Card 6-->
-                    <div class = "project" onclick="window.open('wild_code_school_project.html','_self');" style="cursor: pointer;">
-                        <div class = "card_title">
-                            <h4>Data Analyst training (Python, Pandas...)</h4>
-                        </div>
-                        <div class = "card_description">
-                            <img src="images/wild_code_school.png" alt="profile photo" />
-                        </div>
-                    </div>
-                    
-                </div>
 
                 
 			</section>
