--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -5,7 +5,7 @@
 			<section class="projects-section">
 
                 <h1>Projects</h1>
-                <h2>Data Engineer</h2>
+                <h2>Data Engineering</h2>
 
 
 				<div class="projects">
@@ -46,7 +46,7 @@
 
 
 
-                <h2>Data Scientist</h2>
+                <h2>Data Science</h2>
 
 				<div class="projects">
 
@@ -119,7 +119,7 @@
 
                 
 				
-                <h2>Data Analyst</h2>
+                <h2>Data Analysis</h2>
 				<div class="projects">
 
 					<!--Card 1-->
