--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -76,7 +76,7 @@
                     <!--Card 3-->
                     <div class = "project" onclick="window.open('manomano_project.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Power BI<br>Python<br>Pandas<br>NLP<br>Text2Emotion</h4>
+                            <h4>Python<br>Power BI<br>Pandas<br>NLP<br>Text2Emotion</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/manomano-2.png" alt="profile photo" />
