--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -162,7 +162,7 @@
                             <h4>Data Analyst training (Python, Pandas...)</h4>
                         </div>
                         <div class = "card_description">
-                            <img src="images/wild_code_school.png" alt="profile photo" />
+                            <img src="images/wild_code_school-2.png" alt="profile photo" />
                         </div>
                     </div>
 
