--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -159,7 +159,7 @@
                     <!--Card 6-->
                     <div class = "project" onclick="window.open('wild_code_school_project.html','_self');" style="cursor: pointer;">
                         <div class = "card_title">
-                            <h4>Data Analyst training (Python, Pandas...)</h4>
+                            <h4>Python and many libraries<br>SQL<br>MongoDB<br>JSON<br>Sklearn<br>Tableau<br>Power BI<br>Metabase<br>Dataiku</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/wild_code_school-2.png" alt="profile photo" />
