--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ img {
 	width: auto\9;
 }
 
+.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+    width: 1500px;
+	object-fit: contain;
+  }
+
 /* this is used to change the display of hyperlink. 'text-decoration: none' kept showing a small bar at the bottom so I changed color to white to solve this issue */
 
 nav a:visited {text-decoration: underline dotted white; color:black;}
