--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ img {
     width: 1500px;
 	object-fit: contain;
 	bottom: -100px;
+	margin-top: -50px;
   }
 
 /* this is used to change the display of hyperlink. 'text-decoration: none' kept showing a small bar at the bottom so I changed color to white to solve this issue */
