--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-    width: 1500px;
+    width: 80%;
 	object-fit: contain;
 	bottom: -100px;
 	margin-top: -50px;
