--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@
 	scroll-behavior: smooth;
 }
 
+
+.presentation_svg {
+	position: absolute;
+	top: 100px;
+	z-index: -1;
+}
+
+
 img {
 	border: 0;
 	-ms-interpolation-mode: bicubic;
@@ -52,7 +60,7 @@ nav ul li:hover {
 }  
 
 .presentation_area {
-	background-color: #009AE4;
+
 }
 
 nav {
@@ -60,7 +68,7 @@ nav {
 }
 
 .page-content {
-	background-color: #ffffff;
+
 }
 
 .page-content .projects-section .project {
