--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 }
 
 
+
 img {
 	border: 0;
 	-ms-interpolation-mode: bicubic;
@@ -35,6 +36,9 @@ img {
 	bottom: -100px;
 	margin-top: -50px;
   }
+
+
+
 
 /* this is used to change the display of hyperlink. 'text-decoration: none' kept showing a small bar at the bottom so I changed color to white to solve this issue */
 
@@ -106,10 +110,7 @@ nav {
 .project_area p a:hover, a:active { text-decoration: none; color:#ECECEC ; font-weight:bold; }
 .project_area p a:link { text-decoration: none; color:#ECECEC ; font-weight:bold; }
 
-.presentation_area p{
-	color: white;
-	font-weight: bold;
-}
+
 
 footer {
 	background-color: #009AE4;
@@ -218,6 +219,8 @@ nav .nav_container ul {
 /* presentation_area div */
 
 
+
+
 .presentation_area {
 
 	width: 100%;
@@ -225,14 +228,24 @@ nav .nav_container ul {
 	
 }
 
-.presentation_area h1{
+.presentation_area .presentation_text_box {
+	background-color: #f3f5fc;
+	height: 400px;
+	width: 400px;
+	border-radius: 5%;
+	right:0;
+	position: absolute;
+	margin-top: 100px;
+}
+
+/* .presentation_area h1{
 	line-height: 250px;
 	height: 200px;
 	font-family: 'Oswald', sans-serif;
 	text-transform: uppercase;
 	font-size: 3vw;
 	text-align: center;
-}
+} */
 
 
 h5{
@@ -257,30 +270,64 @@ h5{
 
 .presentation_area .box{
 
+	display: flex;
+	flex-wrap: wrap;
 	width: 40%;
 	height: 400px;
 	position:relative;
     margin: 0 auto;
-	top: 50px;
+	top: 85px;
+	
 }
+
+.presentation_area .presentation_text_box {
+	background-color: #f3f5fc;
+	height: 200px;
+	width: 400px;
+	border-radius: 5%;
+	right:0;
+	position: absolute;
+	margin-top: 150px;
+	padding: 20px;
+}
+
+.presentation_area .presentation_text_box h3{
+	line-height: 20px;
+	font-family: 'Oswald', sans-serif;
+	text-transform: uppercase;
+	font-size: 30px;
+	text-align: center;
+}
+
+.underline {
+	display:block;
+	width: 80%;
+	height: 10px;
+	background-color: #6441a5ff;
+	margin: 0 auto;
+	border-radius: 25px;
+	margin-top: 10px;
+}
+
+.presentation_area .presentation_text_box p{
+	font-family: 'Oswald', sans-serif;
+	text-align: center;
+	margin-top: 20px;
+	font-size: 20px;
+}
+
+
 
 .presentation_area .box img{
 	width: 310px;
 	height: 310px;
 	margin-top: 50px;
-	float:left;
+	z-index: 10;
 	border-radius: 5%;
 	border: 0px solid #A7D9C9;
 }
 
-.presentation_area .box p{
 
-	width: 400px;
-	margin-top: 50px;
-	float: right;
-	margin-right: 100px;
-	font-weight: bold;
-}
 
 .presentation_area .box a img:hover {
 	opacity: 0.3;
