--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ h5{
 	width: 100%;
 	margin-top: 250px;
 	z-index: 1;
-	display: flex;   
+	display: inline-block;   
 	justify-content: center;
 }
 
