--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
 /* Colors */
 
 nav ul li:hover {
-	border-bottom: 3px solid #009AE4;
+	border-bottom: 3px solid #5f80e8;
 }  
 
 .presentation_area {
@@ -81,7 +81,7 @@ nav {
 }
 
 .page-content .projects-section .project .card_title {
-	background-color: #009AE4;
+	background-color: #5f80e8;
 }
 
 .page-content .projects-section .project h4 {
@@ -97,7 +97,7 @@ nav {
 }
 
 .project_area {
-	background-color: #009AE4;
+
 }
 
 .project_area p .highlightme{
@@ -113,7 +113,7 @@ nav {
 
 
 footer {
-	background-color: #009AE4;
+	background-color: #6441a5;
 	/* background-color: #8AAAE5; */
 }
 /* Colors */
@@ -303,7 +303,7 @@ h5{
 	display:block;
 	width: 80%;
 	height: 10px;
-	background-color: #6441a5ff;
+	background-color: #6441a5;
 	margin: 0 auto;
 	border-radius: 25px;
 	margin-top: 10px;
