--- a/_includes/projects_area.html
+++ b/_includes/projects_area.html
@@ -125,7 +125,7 @@
                     <!--Card 3-->
                     <div class = "project" onclick="window.open('digitecpharma_project.html','_self');" style="cursor: pointer;">
 						<div class = "card_title">
-                            <h4>Metabase<br>SQL</h4>
+                            <h4>SQL<br>Metabase</h4>
                         </div>
                         <div class = "card_description">
                             <img src="images/digitecpharma-2.png" alt="profile photo" />
