--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ nav {
 }
 
 .project_area p .highlightme{
-	color:#6441a5;
+	color:#4b41a5;
 }
 
 .project_area p a:visited { text-decoration:none; color:#ECECEC ; font-weight:bold; }
